# ecole

./: .gitignore  CMakeLists.txt  pyproject.toml
cmake/: DependenciesResolver.cmake  Python.cmake
dev/: conda.yaml
libecole/dependencies/: private.cmake  public.cmake
libecole/include/ecole/dynamics/: branching.hpp  primal-search.hpp
libecole/include/ecole/observation/: hutter-2011.hpp  khalil-2016.hpp  milp-bipartite.hpp  node-bipartite.hpp  pseudocosts.hpp  strong-branching-scores.hpp
libecole/include/ecole/scip/: cons.hpp
libecole/include/ecole/utility/: sparse-matrix.hpp
libecole/src/dynamics/: branching.cpp  primal-search.cpp
libecole/src/instance/: capacitated-facility-location.cpp  combinatorial-auction.cpp  set-cover.cpp
libecole/src/observation/: hutter-2011.cpp  khalil-2016.cpp  milp-bipartite.cpp  node-bipartite.cpp  pseudocosts.cpp
libecole/src/scip/: cons.cpp
libecole/tests/src/dynamics/: test-branching.cpp  test-primal-search.cpp
libecole/tests/src/observation/: test-hutter-2011.cpp  test-khalil-2016.cpp  test-milp-bipartite.cpp  test-node-bipartite.cpp  test-strong-branching-scores.cpp
python/ecole/: CMakeLists.txt
python/extension-helper/dependencies/: public.cmake
