[build-system]
requires = [
	"pybind11>=2.7,<3.0",
	"numpy",
	"scikit-build-core",
]
build-backend = "scikit_build_core.build"

[project]
name = "ecole"
dynamic = ["version"]
description = "Extensible Combinatorial Optimization Learning Environments"
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
	{ name = "Antoine Prouvost et al." },
]
requires-python = ">=3.8"
dependencies = [
	"numpy>=1.4",
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://www.ecole.ai"

[tool.scikit-build]
cmake.version = ">=3.16"
cmake.build-type = "Release"
wheel.install-dir = "ecole"
wheel.packages = ["python/ecole/src/ecole"]

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "ON"
CMAKE_INSTALL_LIBDIR = "lib"
CMAKE_INSTALL_BINDIR = "bin"
CMAKE_INSTALL_INCLUDEDIR = "include"
ECOLE_PY_EXT_INSTALL_LIBDIR = "."

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = '''(?sx)
VERSION_MAJOR\s+(?P<major>\d+).*?
VERSION_MINOR\s+(?P<minor>\d+).*?
VERSION_PATCH\s+(?P<patch>\d+).*?
VERSION_PRE\s+(?P<pre>[^\s\#]*).*?
VERSION_POST\s+(?P<post>[^\s\#]*).*?
VERSION_DEV\s+(?P<dev>[^\s\#]*)
'''
result = "{major}.{minor}.{patch}{pre}{post}{dev}"

[tool.black]
line-length = 100
